--- a/BACKEND/BACKEND/Web.config
+++ b/BACKEND/BACKEND/Web.config
@@ -11,10 +11,10 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BACKEND-20201105081328.mdf;Initial Catalog=aspnet-BACKEND-20201105081328;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="INSERTE_CADENA_DEL_AZURE" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+  </appSettings>
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.7.2"/>
