Controller Students y DataContexgt

--- a/BACKEND/BACKEND/Web.config
+++ b/BACKEND/BACKEND/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="INSERTE_CADENA_DEL_AZURE" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="AZURE LINK" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
   </appSettings>
